--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /portfolio/
     
   - title: "CV"
-    url: /files/paper1.pdf
+    url: /files/cv.pdf
     
   - title: "Patent"
     #photo: /images/Final_Assembly.JPG
