--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Behyad's Page"
+title                    : "Behyad's Page bip"
 title_separator          : "-"
 name                     : &name "Behyad Zarnaghi"
 description              : &description "personal description"
