--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Behyad Zarnaghi"
-  avatar           : "Profile_image.jpg"
+  avatar           : "prof_2.jpg"
   bio              : "A Bachelor Student of Mechanical Engineering"
   location         : #"Location"
   employer         :
