--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Behyad Zarnaghi"
   avatar           : "prof_2.jpg"
-  bio              : "A Bachelor Student of Mechanical Engineering"
+  bio              : "Bachelor Student of Mechanical Engineering"
   location         : #"Location"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
