--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
     url: /markdown/ 
     
   - title: "CV" 
-    url: /files/CV-Behyad Zarnaghi.pdf
+    url: /files/CV_BZ.pdf
     
 
   # - title: "Projects"
